--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,20 @@
 <%- include('./partials/head.ejs') %>
 
+<h1 class="main-title">Uw persoonlijke dagboek</h1>
 
+<form class="note-form" action="/new" method="post">
+    <fieldset>
+        <legend>Type hier jouw aantekeningen</legend>
+
+            <label>Datum van aantekening</label>
+            <input class="input-date" type="date" name="date" placeholder="datum">
+
+            <label>Type hier uw aantekening</label>
+            <textarea class="textarea-aantekening" cols="30" rows="10" type="text" name="note" placeholder="Type hier..."></textarea>
+
+            <button class="form-btn" type="submit" value="opslaan">Opslaan</button>
+
+    </fieldset>
+</form>
 
 <%- include('./partials/foot.ejs') %>
