--- a/public/style.css
+++ b/public/style.css
@@ -11,7 +11,6 @@
 }
 
 body {
-    
     margin-left: var(--left-margin);
     margin-right: var(--right-margin);
     margin-top: var(--top-margin);
@@ -61,29 +60,40 @@ nav {
     border-bottom: 2px solid var(--clr-green);
 }
 
+main {
+    padding-left: 2rem;
+    padding-right: 2rem;    
+}
+
 .main-title {
     color: var(--clr-green);
     text-align: center;
 }
 
+.dagboek-section {
+    display: flex;
+    flex-direction: column;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    align-items: center;
+}
+
 .note-form {
     display: flex;
     justify-content: center;
-    flex-direction: row;
+    flex-direction: column;
 }
 
-fieldset {
+.fieldset-form {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    /* background-color: var(--clr-yellow); */
     width: 30rem;
     /* box-shadow: 5px 5px 10px black; */
 }
 
 legend {
     text-align: center;
-    /* width: 30rem; */
     margin-bottom: 1.5rem;
 }
 
@@ -132,6 +142,25 @@ legend {
 .form-btn:hover {
     background-color: var(--clr-green);
     color: white;
+}
+
+.aantekeningen-div {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 3rem;
+}
+
+.aantekeningen-output {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 30rem;
+    height: 10rem;
+}
+
+.aantekeningen-output h2 {
+    color: var(--clr-green);
 }
 
 @media screen and (min-width: 930px ) {
