--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,19 +2,28 @@
 
 <h1 class="main-title">Uw persoonlijke dagboek</h1>
 
-<form class="note-form" action="/new" method="post">
-    <fieldset>
-        <legend>Type hier jouw aantekeningen</legend>
+<section class="dagboek-section">
 
-            <label>Datum van aantekening</label>
-            <input class="input-date" type="date" name="date" placeholder="datum">
+    <form class="note-form" action="/new" method="post">
+        <fieldset class="fieldset-form">
+            <legend>Type hier jouw aantekeningen</legend>
 
-            <label>Type hier uw aantekening</label>
-            <textarea class="textarea-aantekening" cols="30" rows="10" type="text" name="note" placeholder="Type hier..."></textarea>
+                <label>Datum van aantekening</label>
+                <input class="input-date" type="date" name="date" placeholder="datum" required>
 
-            <button class="form-btn" type="submit" value="opslaan">Opslaan</button>
+                <label>Type hier uw aantekening</label>
+                <textarea class="textarea-aantekening" cols="30" rows="10" type="text" name="note" placeholder="Type hier..." required></textarea>
 
-    </fieldset>
-</form>
+                <button class="form-btn" type="submit" value="opslaan">Opslaan</button>
+
+        </fieldset>
+    </form>
+
+    <div class="aantekeningen-div">
+        <fieldset class="aantekeningen-output">
+            <legend>Hier komen jouw aantekeningen</legend>
+        </fieldset>
+    </div>
+</section>    
 
 <%- include('./partials/foot.ejs') %>
