--- a/public/style.css
+++ b/public/style.css
@@ -107,6 +107,26 @@ legend {
     font-weight: bold;
 }
 
+.input-titel {
+    margin-top: .5rem;
+    margin-bottom: 1.5rem;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 5px;
+    border: 2px solid black;
+    font-weight: normal;
+}
+
+.input-titel:focus {
+    background-color: var(--clr-green);
+    outline: none;
+}
+
+.input-label:after {
+    content: "*";
+    color: red;
+}
+
 .input-date:focus {
     background-color: var(--clr-green);
     outline: none;
@@ -115,6 +135,7 @@ legend {
 .textarea-aantekening {
     border: 2px solid black;
     margin-top: .5rem;
+    margin-bottom: 1rem;
     padding-left: 5px;
 }
 
