--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,14 +11,18 @@
                 <label class="input-label">Datum van aantekening</label>
                 <input class="input-date" type="datetime-local" name="datum" placeholder="datum" required>
 
-                <label class="input-label">Titel</label>
-                <input class="input-titel" type="text" name="titel" placeholder="Notitie titel" required>
+                <label>Titel</label>
+                <input class="input-titel" type="text" name="titel" placeholder="Notitie titel">
 
                 <label class="input-label">Type hier uw aantekening</label>
                 <textarea class="textarea-aantekening" cols="30" rows="10" type="text" name="beschrijving" autocomplete="on" placeholder="Type hier..." required></textarea>
 
                 <label class="input-label">Herinnering</label>
                 <input class="input-date" type="datetime-local" name="herinnering" placeholder="datum" required>
+
+                <label class="input-label-2">Email</label>
+                <label class="input-label-uitleg">Je notitie zal ook naar je mail gestuurd worden!</label>
+                <input class="input-mail" type="email" name="mail" autocomplete="on" placeholder="Email">
 
                 <button class="form-btn" type="submit" value="opslaan">Opslaan</button>
 
