--- a/public/style.css
+++ b/public/style.css
@@ -11,6 +11,7 @@
 }
 
 body {
+    width: fit-content;
     margin-left: var(--left-margin);
     margin-right: var(--right-margin);
     margin-top: var(--top-margin);
@@ -72,7 +73,7 @@ main {
 
 .dagboek-section {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     padding-left: 2rem;
     padding-right: 2rem;
     align-items: center;
@@ -129,6 +130,7 @@ legend {
     background-color: var(--clr-green);
     outline: none;
     transform: scale(1.03);
+    /* border-radius: 10px; */
 }
 
 .input-mail {
@@ -197,9 +199,9 @@ legend {
 
 .aantekeningen-div {
     display: flex;
+    margin-left: 18rem;
     justify-content: center;
     flex-direction: column;
-    margin-top: 3rem;
 }
 
 .aantekeningen-output {
@@ -207,7 +209,7 @@ legend {
     justify-content: center;
     flex-direction: column;
     width: 30rem;
-    height: 10rem;
+    height: 39.85rem;
 }
 
 .aantekeningen-output h2 {
@@ -225,3 +227,15 @@ legend {
         font-size: 25px;
     }
 }
+
+@media screen and (max-width: 820px) {
+    .dagboek-section {
+        flex-direction: column;
+    }
+
+    .aantekeningen-div {
+        margin-top: 5rem;
+        margin-left: 0;
+    }
+}
+
