--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,8 +20,7 @@
                 <label class="input-label">Herinnering</label>
                 <input class="input-date" type="datetime-local" name="herinnering" placeholder="datum" required>
 
-                <label class="input-label-2">Email</label>
-                <label class="input-label-uitleg">Je notitie zal ook naar je mail gestuurd worden!</label>
+                <label class="input-label-2">Email ~ <span>Je notitie zal ook naar je mail gestuurd worden! (niet verplicht)</span></label>
                 <input class="input-mail" type="email" name="mail" autocomplete="on" placeholder="Email">
 
                 <button class="form-btn" type="submit" value="opslaan">Opslaan</button>
