--- a/public/style.css
+++ b/public/style.css
@@ -224,6 +224,7 @@ legend {
     text-align: center;
     position: relative;
     margin-bottom: 1rem;
+    border-radius: 15px;
 }
 
 @media screen and (min-width: 930px ) {
