--- a/public/style.css
+++ b/public/style.css
@@ -63,7 +63,8 @@ nav {
 
 main {
     padding-left: 2rem;
-    padding-right: 2rem;    
+    padding-right: 2rem;   
+    width: max-content;
 }
 
 .main-title {
